--- a/email-worker-compose/docker-compose.yml
+++ b/email-worker-compose/docker-compose.yml
@@ -1,6 +1,10 @@
 version: '3'
 volumes:
   dados:
+networks:
+  banco:
+  web:
+  fila:
 services:
   db:
     image: postgres:9.6
@@ -14,6 +18,8 @@ services:
       # Scripts
       - ./scripts:/scripts
       - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks: 
+      - banco
   frontend:
     image: nginx:1.13
     volumes: 
@@ -23,6 +29,10 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
+    networks: 
+      - web
+    depends_on: 
+      - app
   app:
     image: python:3.6
     volumes: 
@@ -30,4 +40,27 @@ services:
       - ./app:/app
     working_dir: /app
     command: bash ./app.sh
-    
+    networks: 
+      - banco
+      - web
+      - fila
+    depends_on: 
+      - db
+      - queue
+    environment:
+      - DB_NAME=abc_sender
+  queue:
+    image: redis:3.2
+    networks: 
+      - fila
+  worker:
+    build: worker
+    volumes: 
+      #Worker
+      - ./worker:/worker
+    working_dir: /worker
+    command: worker.py
+    networks: 
+      - fila
+    depends_on: 
+      - queue
